# Naturalisation

./: .gitignore  README.md  browser.py  codeql-analysis.yml  dev.ipynb  get_decrees.ipynb  index.html  pyproject.toml  reader.py  requirements.txt
JORF_reader/: JORF_reader.py  __init__.py
JORF_reader/results/: decrees.json
_build/html/: output.json
docs/: index.html
docs/_build/html/: .buildinfo  example.html  index.html  objects.inv  search.html
docs/_build/html/.doctrees/: JORF_reader.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/_modules/: JORF_reader.html  index.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py
docs/source/_build/html/: JORF_reader.html  example.html  modules.html  searchindex.js
docs/source/_build/html/.doctrees/: JORF_reader.doctree  environment.pickle  example.doctree  (+2 more)
results/: decrees.json  info.json  naturalized.json
site/: search.json
site/JORF_reader/: JORF_reader.html
site/source/: conf.py
site/source/_build/html/: genindex.html  index.html  py-modindex.html  search.html
site/source/_static/css/: custom.css
source/: JORF_reader.rst  conf.py  example.rst
source/_build/html/: JORF_reader.html  example.html  genindex.html  index.html  modules.html  py-modindex.html  search.html
source/_build/html/_modules/: JORF_reader.html  index.html
source/_build/html/_sources/: JORF_reader.rst.txt  index.rst.txt  modules.rst.txt
source/_static/css/: custom.css
src/: decrees.json  decrees_felipe.json  naturalized.json  naturalized_felipe.json
(+7 files in other folders)
