[tool.poetry]
name = "JORF_reader"
version = "0.0.2"
description = "Small python script to parse a pdf from https://www.legifrance.gouv.fr in order to search for all persons that obtained the French nationality within the pdf file. Keeps track of number of persons, name, origin, and department of a specific series (54 series by year)."
authors = ["Alejandro VILLARREAL LARRAURI <alex.villarreal.larrauri@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/AlexVillarra/Naturalisation"

[tool.poetry.dependencies]
python = "^3.9"
jellyfish = "^0.8.2"
py-pdf-parser = "^0.10.0"
dateparser = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
